# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPLv2

  07 Sep 2005; Roy Marples <uberlord@gentoo.org>:
 
    replace the apipa module with a generic arping module which can now
    do gateway detection and apply a configuration for it as well as the
    apipa stuff

    updated env_whitelist so that nothing is allowed by default

    system module now runs through pre instead of post and is run by
    lo as well, so dns_ options can be configured for it

    netplug and wpa_supplicant understand negative timeouts to be defined
    as "return immediately and don't wait for success"

    dns options and sortlist now get merged in resolv.conf too

    bridge error message regarding the kernel module should work with
    newer versions of bridge-utils

  06 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    dns_*, nis_* and ntp_* options now work globally too, but are overridden
    by specific interface/essid/mac ones.

    dhcpcd and pump now support the "options" and "sortlist" directives too,
    #104870

  05 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Added resolv.conf options for "options" and "sortlist" directives, #104870

    dns_search_path_eth0 renamed to dns_search_eth0 so that all the dns_
    variables match their resolv.conf counterpart.

  02 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    netplug module added + documentation for it.

    We also set MTU in the pre_start of ifconfig/iproute2 incase a DHCP
    client or similar needs it.

  01 Sep 2005; Roy Marples <uberlord@gentoo.org>:

    Altered iproute2 to use the same lo logic as ifconfig below

    Fixed ifconfig bringing lo up and then working out aliases, bug #104415

  31 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    service status requests (either by /etc/init.d/foo status or rc-status)
    now update the service status by checking daemons and/or pidfiles to check